tests/snapshots/snapshot_tests__array_tiling_poly2.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_tiling_poly2.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int a i 3) S) (Read-Int-Int a S))",
        "(= (Read-Int-Int (Write-Int-Int a S 3) S) 3)",
        "(= (Read-Int-Int (Write-Int-Int a S 3) S) (Read-Int-Int a S))",
        "(= (Read-Int-Int (Write-Int-Int a Z 3) S) (Read-Int-Int a S))",
        "(= (Read-Int-Int (Write-Int-Int a Z (- S)) S) (Read-Int-Int a S))",
        "(= (Read-Int-Int (Write-Int-Int a Z S) S) (Read-Int-Int a S))",
        "(= (Read-Int-Int (Write-Int-Int a i 3) Z) (Read-Int-Int a Z))",
        "(= (Read-Int-Int (Write-Int-Int a Z 3) Z) 3)",
        "(= (Read-Int-Int (Write-Int-Int a Z Z) Z) Z)",
        "(= (Read-Int-Int (Write-Int-Int a_next Z i) Z) i)",
        "(= (Read-Int-Int (Write-Int-Int a Z S) Z) S)",
        "(= (Read-Int-Int (Write-Int-Int a S S) S) S)",
        "(= (Read-Int-Int (Write-Int-Int a S S) Z) (Read-Int-Int a Z))",
        "(= (Read-Int-Int (Write-Int-Int a_next pc Z) Z) (Read-Int-Int a_next Z))",
        "(= (Read-Int-Int (Write-Int-Int a_next pc S) S) (Read-Int-Int a_next S))",
        "(= (Read-Int-Int (Write-Int-Int a_next i S) S) (Read-Int-Int a_next S))",
        "(= (Read-Int-Int (Write-Int-Int a Z S) Z) (Read-Int-Int a Z))",
        "(= (Read-Int-Int (Write-Int-Int a i S) S) (Read-Int-Int a S))",
        "(= (Read-Int-Int (Write-Int-Int a_next i Z) Z) (Read-Int-Int a_next Z))",
    ],
}
