tests/snapshots/snapshot_tests__array_tiling_poly2.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_tiling_poly2.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!1 i 3) S) (Read-Int-Int Array-Int-Int!val!1 S))",
    ],
}
