tests/snapshots/snapshot_tests__array_tiling_poly3.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_tiling_poly3.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int a_next i_next i) i_next) i)",
        "(= (Read-Int-Int (Write-Int-Int a i Z) i) Z)",
        "(= (Read-Int-Int (Write-Int-Int a Z Z) Z) Z)",
        "(= (Read-Int-Int (Write-Int-Int a_next Z i) Z) (Read-Int-Int a_next Z))",
        "(= (Read-Int-Int (Write-Int-Int a_next Z i) Z) i)",
    ],
}
