tests/snapshots/snapshot_tests__array_tiling_poly4.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_tiling_poly4.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int a_next Z (- i)) i) (Read-Int-Int a_next i))",
        "(= (Read-Int-Int (Write-Int-Int a_next Z (- i)) Z) (- i))",
        "(= (Read-Int-Int (Write-Int-Int a i Z) i) Z)",
        "(= (Read-Int-Int (Write-Int-Int a Z S) Z) S)",
        "(= (Read-Int-Int (Write-Int-Int a Z Z) Z) Z)",
        "(= (Read-Int-Int (Write-Int-Int a Z (- Z)) Z) (- Z))",
        "(= (Read-Int-Int (Write-Int-Int a i S) i) S)",
        "(= (Read-Int-Int (Write-Int-Int a Z i_next) Z) i_next)",
        "(= (Read-Int-Int (Write-Int-Int a Z 5) Z) 5)",
        "(= (Read-Int-Int (Write-Int-Int a S S) S) S)",
        "(= (Read-Int-Int (Write-Int-Int a i i_next) i) i_next)",
        "(= (Read-Int-Int (Write-Int-Int a Z 10) Z) 10)",
    ],
}
