tests/snapshots/snapshot_tests__array_tiling_poly4.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_tiling_poly4.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int a_next Z (- i)) i) (Read-Int-Int a_next i))",
        "(= (Read-Int-Int (Write-Int-Int a_next Z (- i)) Z) (- i))",
        "(= (Read-Int-Int (Write-Int-Int a i Z) i) Z)",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!0 Z (- i)) Z) (- i))",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!0 Z (- i)) Z) (Read-Int-Int Array-Int-Int!val!0 Z))",
        "(= (Read-Int-Int (Write-Int-Int a i Z) i) (Read-Int-Int a i))",
        "(= (Read-Int-Int (Write-Int-Int a_next Z (- i)) Z) (Read-Int-Int a_next Z))",
    ],
}
